updated api doc and server to include endpoints for: - getting all classes - getting a single class by class name - updating the study time for a class
